Mon Nov 15 18:13:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Updater_T.cpp:
          Use ::DDS:: instead of DDS_.

Mon Nov 15 15:39:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Updater_T.cpp:
          Use ::DDS:: instead of DDS_.

        * connectors/dds4ccm/tests/Policies/main.cpp:
        * connectors/dds4ccm/tests/Policies/policies.mpc:
        * connectors/dds4ccm/tests/Policies/states_test.h:
        * connectors/dds4ccm/tests/Policies/states_test.cpp:
          Added test which explicitely tests whether all DDS4CCM states
          (view, sample, and, instance states) are equal to the RTI states.

Mon Nov 15 14:59:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Reader_T.cpp:
          Typo.

Mon Nov 15 14:09:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
          Fixed incorrect logging

Mon Nov 15 13:40:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/PortStatusListener.cpp:
          Fixed incorrect log format specifiers

Mon Nov 15 13:12:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
        * connectors/dds4ccm/impl/ConditionManager.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
        * connectors/dds4ccm/impl/ndds/WaitSet.h:
        * connectors/dds4ccm/impl/ndds/WaitSet.cpp:
          Moved implementation of check_handle.

Mon Nov 15 12:45:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.cpp:
        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Fixed memory leak and shutdown crashes
