@@ -1,3 +1,11 @@
+Mon Nov 15 18:27:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
+        * connectors/dds4ccm/tests/MultiTopic/Connector/ccm_dds_mt.idl:
+        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.idl:
+        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_conn.idl:
+          Fixes to get head compiling without errors
+
 Mon Nov 15 18:13:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/Updater_T.cpp:
